--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="background_container">
         <header class="header"> 
             <div class="header-conteiner">
-                <a class="header-logo" href="/">
+                <a class="header-logo" href="#" onclick="location.reload();">
                     <img class="header-logo-image" src="./img/logo.svg" alt="Logo" />
                 </a>
                 <nav class="header-menu">
